--- a/index.html
+++ b/index.html
@@ -54,6 +54,36 @@
         </div>
     </header>
 
+    <main>
+       <!--section inicio-->
+    <section class="Home" id="home">
+        <div class="home-container">
+          <h1>¡Bienvenidos a COBAYOLANDIA!</h1>
+          <p>En esta web encontrarás toda la información que necesitas sobre los cobayos, también llamados conejillos de
+            Indias, acures, curís, cuyes, guimos, cuilos, cuis o cuys.</p>
+  
+        </div>
+  
+        <div class="home-primary">
+          <div class="home-title">
+            <h4>En las distintas secciones verás: </h4>
+            <ul>
+              <li><i class="fa-solid fa-pen"></i> Información.</li>
+              <li><i class="fa-solid fa-pen"></i> Productos.</li>
+              <li><i class="fa-solid fa-pen"></i> Una presentacion de quienes formamos parte de esta web.</li>
+              <li><i class="fa-solid fa-pen"></i> Un formulario donde podrás ponerte en contacto con nosotros.</li>
+            </ul>
+          </div>
+          <div class="home-img">
+            <picture>
+              <img src="imagenes/cobayas.jpg" alt="" style="width:13rem;height: 13rem;">
+              <img src="imagenes/cobayos.webp" alt="" style="width:13rem;height: 13em;">
+            </picture>
+          </div>
+        </div>
+      </section> 
+    </main>
+
 </body>
 
 <script src="main.js"></script>
