--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <!--tarjetas de productos-->
         <!--Bandejas sanitarias-->
 
-        <div class="product-category"  id="trays">
+        <div class="product-category" id="trays">
           <h2>Bandejas Higiénicas</h2>
           <div class="product-subcategory">
 
@@ -609,7 +609,7 @@
                 <figure>
                   <img src="Imagenes/bandeja1.webp" alt="">
                 </figure>
-                <h3>Bandeja sanitaria de plástico</h3>
+                <h3>Bandeja sanitaria grande</h3>
                 <button>Añadir al carrito</button>
 
               </div>
@@ -649,7 +649,7 @@
                 <figure>
                   <img src="Imagenes/bebedero2.webp" alt="">
                 </figure>
-                <h3>Bebedero de plástico</h3>
+                <h3>Bebedero de plástico chico</h3>
                 <button>Añadir al carrito</button>
               </div>
             </div>
@@ -673,15 +673,13 @@
                 <button>Añadir al carrito</button>
               </div>
             </div>
-
-          </div>
-
         </div>
+      </div>
 
         <!--camas-->
         <div class="product-category" id="beds">
           <h2>Camas</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -702,7 +700,7 @@
                 <button>Añadir al carrito</button>
               </div>
             </div>
-            
+
             <div class="products">
               <div class="product-body">
                 <figure>
@@ -718,7 +716,7 @@
         <!--comederos-->
         <div class="product-category" id="feeders">
           <h2>Comederos</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -767,7 +765,7 @@
         <!--Heneras/Heno-->
         <div class="product-category" id="hayes">
           <h2>Heneras y Henos</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -846,7 +844,7 @@
         <!--Juguetes-->
         <div class="product-category" id="toys">
           <h2>Juguetes y Accesorios</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -915,7 +913,7 @@
         <!--Suelos-->
         <div class="product-category" id="floors">
           <h2>Suelos absorbentes</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -954,7 +952,7 @@
         <!--Suplemento-->
         <div class="product-category" id="supplements">
           <h2>Suplementos</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -1003,7 +1001,7 @@
         <!--Transportadores-->
         <div class="product-category" id="transport">
           <h2>Transportadores</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -1052,7 +1050,7 @@
         <!--Tuneles-->
         <div class="product-category" id="tunnels">
           <h2>Tuneles</h2>
-          <div class="product-subcategory" >
+          <div class="product-subcategory">
 
             <div class="products">
               <div class="product-body">
@@ -1078,6 +1076,89 @@
       </div>
     </section>
 
+    <!--section nosotros-->
+    <section class="Us" id="us">
+      <h1>Nosotros</h1>
+      <p>Aquí te contaremos quiénes formamos parte de esta página, además hablaremos sobre los protagonistas e
+        inspiradores de este proyecto que es "COBAYOLANDIA"</p>
+
+      <div class="us-container">
+        <div class="us-cards">
+          <div class="us-img">
+            <picture>
+              <img src="Imagenes/img.jpg" alt="">
+            </picture>
+
+          </div>
+
+          <div class="us-text">
+            <h3>Melisa (1993)</h3>
+            <p>La creadora y la humana de Cobayolandia.</p>
+            <p>Es estudiante de Veterinaria y de desarrollo Web,esta página web fue hecha porque le encantan los
+              cobayos,le gusta saber su estilo de vida, que comen, su comportamiento, etc.</p>
+            <p>Su pasión por ellos comenzo cuando era chiquita, cuando adoptó a su primera cobaya llamada Lúa, ella era de color negra con marrón de raza
+              abisinia.</p>
+          </div>
+
+        </div>
+
+        <div class="us-cards">
+          <div class="us-img">
+            <picture>
+              <img src="Imagenes/lua.jpg" alt="">
+            </picture>
+
+          </div>
+
+          <div class="us-text">
+            <h3>Lúa(2011-2017)</h3>
+            <p>Hembra de raza abisinia, la inspiradora de este proyecto web.</p>
+            <p>Fue la primera cobaya en llegar a la familia, le encantaba comer y sobre todo le fascinaba las zanahorias.</p>
+            <p>Fallecio en Marzo del 2017, murio repentinamente.</p>
+
+          </div>
+
+        </div>
+
+
+        <div class="us-cards">
+          <div class="us-img">
+            <picture>
+              <img src="Imagenes/ramsés.jpg" alt="">
+            </picture>
+
+          </div>
+
+          <div class="us-text">
+            <h3>Ramsés (2023)</h3>
+            <p>Es un macho guapetón de 1 añito y algo, de raza abisinia de color marrón-grisáceo.</p>
+            <p>Llego a la familia en enero del 2023, lo daban en adopción, porque su anterior familia no podía cuidarlo.</p>
+            <p>La comida favorita de Ramsés son TODAS las verduras y plantas.</p>
+
+          </div>
+
+        </div>
+
+
+        <div class="us-cards">
+          <div class="us-img">
+            <picture>
+              <img src="Imagenes/hurrem.jpg" alt="">
+            </picture>
+
+          </div>
+
+          <div class="us-text">
+            <h3>Hurrem(2023)</h3>
+            <p>Hembra colorada, de raza americana-abisinia, no se sabe su fecha de nacimiento pero no es "vieja".</p>
+            <p>Llego a la familia, porque la regalaron, estaba en una tienda para mascotas.</p>
+            <p>Es una cobaya buena, no es gritona, y le gustan todas las verduras, pero sobre todo las lechugas.</p>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
   </main>
 
