--- a/index.html
+++ b/index.html
@@ -1134,13 +1134,9 @@
             <p>Es un macho guapetón de 1 añito y algo, de raza abisinia de color marrón-grisáceo.</p>
             <p>Llego a la familia en enero del 2023, lo daban en adopción, porque su anterior familia no podía cuidarlo.</p>
             <p>La comida favorita de Ramsés son TODAS las verduras y plantas.</p>
-
-          </div>
-
-        </div>
-
-
-        <div class="us-cards">
+</div>
+</div>
+ <div class="us-cards">
           <div class="us-img">
             <picture>
               <img src="Imagenes/hurrem.jpg" alt="">
@@ -1159,6 +1155,52 @@
       </div>
 
     </section>
+
+<!--section contacto-->
+<section class="Contact" id="contact">
+
+  <div class="contact-container">
+  
+  
+    <div class="form-container">
+      
+      <form action="#" method="get" enctype="application/x-www-form-urlencoded">
+      <h1>¡Dejanos tus datos! <i class="fa-regular fa-face-smile"></i></h1><!--formulario-->  
+      <div>
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre">
+        </div>
+        <div>
+            <label for="apellido">Apellido</label>
+            <input type="text" name="apellido" id="apellido">
+        </div>
+        <div>
+            <label for="email">Escribe tu comentario</label>
+            <textarea name="comentario" id="comentario" cols="30" rows="10"></textarea>
+        
+        </div>
+        <div>
+            <button class="submit" type="submit">Enviar</button>
+        </div>
+    </form>
+    </div>
+
+
+
+    <div class="form-text">
+      <h3><i class="fa-solid fa-location-dot"></i>Dirreción</h3>
+      <p>Av Brasil 1213. Zona Sur</p>
+      <h3><i class="fa-solid fa-phone"></i>Telefóno</h3>
+      <p>+549356892</p>
+      <h3><i class="fa-brands fa-whatsapp"></i>Whatsapp</h3>
+      <p>+54915893254</p>
+    </div>
+
+  </div>
+
+
+
+</section>
 
   </main>
 
