--- a/index.html
+++ b/index.html
@@ -1184,10 +1184,7 @@
         </div>
     </form>
     </div>
-
-
-
-    <div class="form-text">
+<div class="form-text">
       <h3><i class="fa-solid fa-location-dot"></i>Dirreción</h3>
       <p>Av Brasil 1213. Zona Sur</p>
       <h3><i class="fa-solid fa-phone"></i>Telefóno</h3>
@@ -1197,12 +1194,40 @@
     </div>
 
   </div>
-
-
-
 </section>
+</main>
 
-  </main>
+ <!--Pie de página-->
+ <footer>
+  
+
+   <!--redes sociales-->
+   
+   <div class="social-networks">
+    <div>
+      <a href="#" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
+    </div>
+
+    <div>
+      <a href="#" target="_blank"><i class="fa-brands fa-facebook fa-beat"></i></a>
+    </div>
+
+    <div>
+      <a href="#" target="_blank"><i class="fa-brands fa-instagram fa-beat"></i></a>
+    </div>
+
+    <div>
+      <a href="#" target="_blank"><i class="fa-brands fa-github fa-beat"></i></a>
+    </div>
+    
+  </div>
+
+<p class="copy"> Copyright &copy; 2024 Cobayolandia.
+  </p>
+
+
+
+</footer>
 
 </body>
 
