--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,13 @@
 </section>
 </main>
 
+<!--boton ir arriba-->
+<div class="scroll-top-container">
+  <div class="scroll-top-button">
+    <i class="fa-solid fa-chevron-up"></i>
+  </div>
+</div>
+
  <!--Pie de página-->
  <footer>
   
