--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--Estilos css-->
   <link rel="stylesheet" href="style.css">
   <!--Favicons-->
-  <link rel="icon" type="image/png" sizes="32x32" href="imagenes/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Imagenes/favicon.png">
   <!--Link iconos-->
   <script src="https://kit.fontawesome.com/c21e2c2f2d.js" crossorigin="anonymous"></script>
   <title>Cobayolandia</title>
@@ -23,7 +23,7 @@
   <header class="hero">
     <nav>
       <div class="logo">
-        <img src="imagenes/favicon.png" alt="logo">
+        <img src="Imagenes/favicon.png" alt="logo">
         <a href="#">Cobayolandia</a>
       </div>
       <!--menu hamburguesa-->
@@ -43,7 +43,7 @@
 
       <div class="img-container">
         <picture>
-          <img src="imagenes/Cobayo.jpg" alt="cobayo">
+          <img src="Imagenes/Cobayo.jpg" alt="cobayo">
         </picture>
       </div>
 
@@ -80,7 +80,7 @@
         </div>
         <div class="home-img">
           <picture>
-            <img src="imagenes/cobayos.webp" alt="cobayos" style="width:13rem;height: 13em;">
+            <img src="Imagenes/cobayos.webp" alt="cobayos" style="width:13rem;height: 13em;">
           </picture>
         </div>
       </div>
@@ -125,7 +125,7 @@
           trasera.Poseen visión dicromatica y carecen de percepción de profundidad.
         </p>
         <picture>
-          <img src="imagenes/Anatomia del cuyo.jpg" alt="anatomia">
+          <img src="Imagenes/Anatomia del cuyo.jpg" alt="anatomia">
         </picture>
       </div>
 
@@ -160,7 +160,7 @@
           disposición las 24hs del día y siempre fresca, ya que el agua es la
           encargada de hidratar el organismo y mantener en funcionamiento el sistema urinario.</p>
         <picture>
-          <img src="imagenes/alimentacion.avif" alt="alimentacion">
+          <img src="Imagenes/alimentacion.avif" alt="alimentacion">
         </picture>
       </div>
 
@@ -202,7 +202,7 @@
           reduce mucho su calidad de vida y hacen que vivan menos tiempo.</p>
 
         <picture>
-          <img src="imagenes/habitat.jpg" alt="habitat">
+          <img src="Imagenes/habitat.jpg" alt="habitat">
         </picture>
       </div>
 
@@ -220,7 +220,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo-americano.webp" alt="Americano">
+            <img src="Imagenes/cobayo-americano.webp" alt="Americano">
             <div class="body-cards">
               <h5>Americano</h5>
               <p>Origen: Sudamérica</p>
@@ -229,7 +229,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo crestado.webp" alt="Americano Crestado">
+            <img src="Imagenes/cobayo crestado.webp" alt="Americano Crestado">
             <div class="body-cards">
               <h5>Americano Crestado</h5>
               <p>Origen: Sudamérica</p>
@@ -238,7 +238,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo teddy.webp" alt="Teddy">
+            <img src="Imagenes/cobayo teddy.webp" alt="Teddy">
             <div class="body-cards">
               <h5>Teddy</h5>
               <p>Origen: Desconocido</p>
@@ -247,7 +247,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo rex.webp" alt="Rex">
+            <img src="Imagenes/cobayo rex.webp" alt="Rex">
             <div class="body-cards">
               <h5>Rex</h5>
               <p>Origen: Desconocido</p>
@@ -262,7 +262,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo abisinia.jpg" alt="Abisinia">
+            <img src="Imagenes/cobayo abisinia.jpg" alt="Abisinia">
             <div class="body-cards">
               <h5>Abisinia</h5>
               <p>Origen: Reino Unido (Inglaterra)</p>
@@ -271,7 +271,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo peruano.jpg" alt="Peruana">
+            <img src="Imagenes/cobayo peruano.jpg" alt="Peruana">
             <div class="body-cards">
               <h5>Peruana</h5>
               <p>Origen: Francia (París)</p>
@@ -280,7 +280,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo silkie.jpeg" alt="Silkie">
+            <img src="Imagenes/cobayo silkie.jpeg" alt="Silkie">
             <div class="body-cards">
               <h5>Silkie</h5>
               <p>Origen: Reino Unido (Islas Shetland)</p>
@@ -289,7 +289,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo coronet.jpg" alt="Coronet">
+            <img src="Imagenes/cobayo coronet.jpg" alt="Coronet">
             <div class="body-cards">
               <h5>Coronet</h5>
               <p>Origen: Reino Unido (Inglaterra)</p>
@@ -298,7 +298,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/CobayaTexel.jpg" alt="Texel">
+            <img src="Imagenes/CobayaTexel.jpg" alt="Texel">
             <div class="body-cards">
               <h5>Texel</h5>
               <p>Origen: Reino Unido (Inglaterra)</p>
@@ -307,7 +307,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo merino.jpg" alt="Merino">
+            <img src="Imagenes/cobayo merino.jpg" alt="Merino">
             <div class="body-cards">
               <h5>Merino</h5>
               <p>Origen: Reino Unido (Inglaterra)</p>
@@ -316,7 +316,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo alpaca.webp" alt="Alpaca">
+            <img src="Imagenes/cobayo alpaca.webp" alt="Alpaca">
             <div class="body-cards">
               <h5>Alpaca</h5>
               <p>Origen: Reino Unido (Inglaterra)</p>
@@ -325,7 +325,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo lunkarya.gif" alt="Lunkarya">
+            <img src="Imagenes/cobayo lunkarya.gif" alt="Lunkarya">
             <div class="body-cards">
               <h5>Lunkarya</h5>
               <p>Origen: Suecia (Estocolmo)</p>
@@ -334,7 +334,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobaya sheba.jpg" alt="Sheba">
+            <img src="Imagenes/cobaya sheba.jpg" alt="Sheba">
             <div class="body-cards">
               <h5>Sheba</h5>
               <p>Origen: Australia (Sidney)</p>
@@ -348,7 +348,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo skinny.webp" alt="Skinny">
+            <img src="Imagenes/cobayo skinny.webp" alt="Skinny">
             <div class="body-cards">
               <h5>Skinny</h5>
               <p>Origen: Canadá (Montreal)</p>
@@ -357,7 +357,7 @@
 
           <!--tarjeta-->
           <div class="cards">
-            <img src="imagenes/cobayo baldwin.png" alt="Baldwin">
+            <img src="Imagenes/cobayo baldwin.png" alt="Baldwin">
             <div class="body-cards">
               <h5>Baldwin</h5>
               <p>Origen: Estados Unidos (California)</p>
@@ -408,7 +408,7 @@
             <div class="color-cards">
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/albino.jpeg" alt="Albino">
+                <img src="Imagenes/albino.jpeg" alt="Albino">
                 <div class="body-cards">
                   <h5>Albino</h5>
                   <p>Todo de color blanco y con los ojos rojos o rosados</p>
@@ -417,7 +417,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/blanco letal.jpeg" alt="Blanco Letal">
+                <img src="Imagenes/blanco letal.jpeg" alt="Blanco Letal">
                 <div class="body-cards">
                   <h5>Blanco letal</h5>
                   <p>Similares a la cobaya albina, pero padece un Síndrome mortal.</p>
@@ -426,7 +426,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo self.png" alt="Self">
+                <img src="Imagenes/cobayo self.png" alt="Self">
                 <div class="body-cards">
                   <h5>Self</h5>
                   <p>Todo de un solo color, es el patrón más común y ancestral de los cobayos.</p>
@@ -439,7 +439,7 @@
             <div class="more-cards">
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo aguti.jpg" alt="Agutí">
+                <img src="Imagenes/cobayo aguti.jpg" alt="Agutí">
                 <div class="body-cards">
                   <h5>Agutí</h5>
                   <p>Cobayo todo de un color intercalado con un segundo color, con apariencia de colores superpuestos.
@@ -449,7 +449,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo ceñida.jpeg" alt="Ceñida">
+                <img src="Imagenes/cobayo ceñida.jpeg" alt="Ceñida">
                 <div class="body-cards">
                   <h5>Ceñida</h5>
                   <p>Cobayo todo de color negro con una especie de cinturon blanco que rodea el abdomen.</p>
@@ -458,7 +458,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo holandesa.jpg" alt="Holandesa">
+                <img src="Imagenes/cobayo holandesa.jpg" alt="Holandesa">
                 <div class="body-cards">
                   <h5>Holadensa (Dutch)</h5>
                   <p>Cobayo que tiene la mitad delantera del cuerpo blanco y laterales de la cabeza que son de color
@@ -468,7 +468,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo abigarrada.jpeg" alt="Abigarrada">
+                <img src="Imagenes/cobayo abigarrada.jpeg" alt="Abigarrada">
                 <div class="body-cards">
                   <h5>Abigarrada</h5>
                   <p>Cobayo con una mezcla de un color oscuro y otro claro que se alternan por todo el cuerpo.</p>
@@ -477,7 +477,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobaya carey.jpeg" alt="Carey">
+                <img src="Imagenes/cobaya carey.jpeg" alt="Carey">
                 <div class="body-cards">
                   <h5>Carey</h5>
                   <p>Cobayo de dos o tres colores que se mezclan, muy similar a los gatos carey.</p>
@@ -486,7 +486,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo tricolor.jpeg" alt="Tricolor">
+                <img src="Imagenes/cobayo tricolor.jpeg" alt="Tricolor">
                 <div class="body-cards">
                   <h5>Tricolor</h5>
                   <p>Cobayo con tres franjas o cinturones de tres colores claramente separados y no entremezclados.</p>
@@ -495,7 +495,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobaya himalaya.jpeg" alt="Himalaya">
+                <img src="Imagenes/cobaya himalaya.jpeg" alt="Himalaya">
                 <div class="body-cards">
                   <h5>Himalaya</h5>
                   <p>Cobayo que tiene un pelaje similar al gato siamés.</p>
@@ -504,7 +504,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo ruana.jpeg" alt="Ruana">
+                <img src="Imagenes/cobayo ruana.jpeg" alt="Ruana">
                 <div class="body-cards">
                   <h5>Ruana</h5>
                   <p>Cobayo que tiene todo el cuerpo de dos colores intercalados a excepcion de la cabeza y patas.</p>
@@ -513,7 +513,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo dalmata.jpg" alt="Dálmata">
+                <img src="Imagenes/cobayo dalmata.jpg" alt="Dálmata">
                 <div class="body-cards">
                   <h5>Dálmata</h5>
                   <p>Cobayo con pelaje de color blanco y un color más oscuro(normalmente negro).</p>
@@ -522,7 +522,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo urraca.jpg" alt="Urraca">
+                <img src="Imagenes/cobayo urraca.jpg" alt="Urraca">
                 <div class="body-cards">
                   <h5>Urraca (Magpie)</h5>
                   <p>Surge del cruce de cobayos ruanas, abigarradas y dálmatas..</p>
@@ -531,7 +531,7 @@
 
               <!--tarjeta-->
               <div class="cards">
-                <img src="imagenes/cobayo arlequin.jpg" alt="Arlequín">
+                <img src="Imagenes/cobayo arlequin.jpg" alt="Arlequín">
                 <div class="body-cards">
                   <h5>Arlequín (Harlequin)</h5>
                   <p>Surge del cruce de cobayos ruanas, abigarradas y dálmatas..</p>
